<webview>: Fix missing transparency in captureVisibleRegion().

In output formats that support transparency (png),
WebContentsCaptureClient::EncodeBitmap should propagate the alpha
values of the WebContents if that contents has any.

BUG=600496
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_site_isolation

Review URL: https://codereview.chromium.org/1863953002

Cr-Commit-Position: refs/heads/master@{#385821}

Former-commit-id: 71152bea8837143acecf76d4c662b3482eeab66a